# py_easy_calc

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
calculator/: __init__.py  calculator.py  exceptions.py
scripts/: generate_release_notes.py
tests/: test_calc.py
